# ChangeLog for app-accessibility/speakup-utils
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/ChangeLog,v 1.1 2005/10/06 01:02:00 williamh Exp $

*speakup-utils-1.0 (06 Oct 2005)

  06 Oct 2005; William Hubbs <williamh@gentoo.org> +metadata.xml,
  +speakup-utils-1.0.ebuild:
  Initial Commit
