@@ -1,4 +1,12 @@
-MD5 206e78b71a6c2fd545e1667ab105728e metadata.xml 229
-MD5 da69e14d296396b2ede568a94a810105 speakup-utils-1.0.ebuild 626
-MD5 b3964972498158721565c99530c0e3d3 ChangeLog 384
+MD5 e490650ee4f56c000cdb8f30fcb62edc ChangeLog 479
+RMD160 7ed9980d8cbed57d07c2d70aad06835d9c866c56 ChangeLog 479
+SHA256 cf514df29a066416a9f5898a33631ebd01942c5e8adc54be513f45f6ee02af97 ChangeLog 479
 MD5 95c1bf95c738b15cb895455b1267ea7a files/digest-speakup-utils-1.0 67
+RMD160 afb3ee8309d4ef4506113d383790d5dacbe6f8ae files/digest-speakup-utils-1.0 67
+SHA256 65ef0e1597e76a3dca355550703119dd0aad9710f2049f2ea5d465a1c33fc7ec files/digest-speakup-utils-1.0 67
+MD5 206e78b71a6c2fd545e1667ab105728e metadata.xml 229
+RMD160 c2fce6cfe8dffffda3e825642d6a14f434f2d8d7 metadata.xml 229
+SHA256 136b07e33164930b5b58d5010e6966c2f54ac1d5665c6923af5cadb925ad2c06 metadata.xml 229
+MD5 8e261429fd9e2141a7f8e7f80c69181d speakup-utils-1.0.ebuild 625
+RMD160 d88f7c524b15cc0a938b944b06b7389cd8ce5bc7 speakup-utils-1.0.ebuild 625
+SHA256 e480245f61458d90b32ce265c34981ee5f88ad2c6b43529bd48b9c667490b712 speakup-utils-1.0.ebuild 625
