@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/speakup-utils-1.0.ebuild,v 1.2 2005/10/06 01:04:37 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/speakup-utils-1.0.ebuild,v 1.3 2006/02/04 02:55:18 williamh Exp $
 
 inherit eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.linux-speakup.org"
 SRC_URI="ftp://linux-speakup.org/pub/linux/goodies/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
 
 DEPEND=">=sys-libs/ncurses-5.4"
