@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/speakup-utils
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/ChangeLog,v 1.1 2005/10/06 01:02:00 williamh Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup-utils/Attic/ChangeLog,v 1.2 2006/02/04 02:55:18 williamh Exp $
+
+  04 Feb 2006; William Hubbs <williamh@gentoo.org> speakup-utils-1.0.ebuild:
+  Stable on x86.
 
 *speakup-utils-1.0 (06 Oct 2005)
 
